<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_heroes"
        android:icon="@drawable/ic_heroes"
        android:title="@string/tab_heroes" />
    <item
        android:id="@+id/navigation_augments"
        android:icon="@drawable/ic_augments"
        android:title="@string/tab_augments" />
    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/tab_community" />
    <item
        android:id="@+id/navigation_bulletins"
        android:icon="@drawable/ic_bulletins"
        android:title="@string/tab_bulletins" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/tab_profile" />
</menu>
